Update FastAPI dependency and adjust project structure
- Changed FastAPI dependency to include "standard" extras.
- Updated run command to point to the new main application file in the dynamodb directory.
- Modified test command to cover the dynamodb module instead of server_launcher.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "python.analysis.typeCheckingMode": "basic"
+    "python.pythonPath": ".venv/bin/python",
+    "python.analysis.typeCheckingMode": "basic",
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": [],
+    "files.exclude": {
+        "**/__pycache__": true,
+        "**/.venv": true,
+        "**/.pytest_cache": true,
+        "**/.ruff_cache": true,
+        "**/htmlcov": true
+    }
 }
