Adicionando day1 Descomplicando Prometheus

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,12 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/python,ansible,terraform
+### Vagrant ###
+# General
+.vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.log
+
+### Vagrant Patch ###
+*.box
