Adicionando exporter em Go com métricas de memória e configuração do Docker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
         "**/.pytest_cache": true,
         "**/.ruff_cache": true,
         "**/htmlcov": true
-    }
+    },
+    "cSpell.words": [
+        "github",
+        "prometheus"
+    ]
 }
