--- a/DescomplicandoKubernetes/day9/kind-ingress.yaml
+++ b/DescomplicandoKubernetes/day9/kind-ingress.yaml
@@ -8,8 +8,11 @@ nodes:
     nodeRegistration:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
+  # O extraPortMappings deve estar alinhado com o role
   extraPortMappings:
   - containerPort: 80
     hostPort: 80
     protocol: TCP
   - containerPort: 443
+    hostPort: 443
+    protocol: TCP
