--- a/DescomplicandoKubernetes/day9/ingress-5.yaml
+++ b/DescomplicandoKubernetes/day9/ingress-5.yaml
@@ -1,13 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: giropops-senhas-static
+  name: giropops-senhas
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
+  # - host: giropops-senhas.io
   - http:
       paths:
-      - path: /static
+      - path: /
         pathType: Prefix
         backend:
           service: 
